RESOLVED FIXED 84136
[EFL][WK2] Fix build break when non-cross platform CONTEXT_MENUS are enabled
https://bugs.webkit.org/show_bug.cgi?id=84136
Summary [EFL][WK2] Fix build break when non-cross platform CONTEXT_MENUS are enabled
Michal Pakula vel Rutka
Reported 2012-04-17 02:24:43 PDT
In EFL WebKit2 when ENABLE_CONTEXT_MENUS is set true and CROSS_PLATFORM_CONTEXT_MENUS are set false, there is a build break caused by mismatch between contextMenuItemVector declaration which uses PlatformMenuDescription (defined as Vector<ContexMenuItem and definition which uses const Vector<ContextMenuItem>*. This fixed the build break by adding const to EFL PlatformMenuDesciption.
Attachments
adds const to EFL PlatformMenuDescription (1.42 KB, patch)
2012-04-17 04:09 PDT, Michal Pakula vel Rutka
no flags
Michal Pakula vel Rutka
Comment 1 2012-04-17 03:46:23 PDT
EFL WebKit2 has CONTEXT_MENUS disabled so this patch currently does not blocks the build.
Michal Pakula vel Rutka
Comment 2 2012-04-17 04:09:48 PDT
Created attachment 137510 [details] adds const to EFL PlatformMenuDescription
Grzegorz Czajkowski
Comment 3 2012-04-17 05:25:05 PDT
LGTM.
WebKit Review Bot
Comment 4 2012-04-23 08:05:59 PDT
Comment on attachment 137510 [details] adds const to EFL PlatformMenuDescription Clearing flags on attachment: 137510 Committed r114902: <http://trac.webkit.org/changeset/114902>
WebKit Review Bot
Comment 5 2012-04-23 08:06:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.