[EFL][WK2] Fix build break when non-cross platform CONTEXT_MENUS are enabled. https://bugs.webkit.org/show_bug.cgi?id=84136

Patch by Michał Pakuła vel Rutka <m.pakula@samsung.com> on 2012-04-23
Reviewed by Andreas Kling.

There was a mismatch between contextMenuItemVector declaration and definition.
Fixed by changing PlatformMenuDescription for EFL port by adding a const modifier.

No new tests required.

* platform/PlatformMenuDescription.h:
(WebCore): Added const modifier to PlatformMenuDescription definition.

Canonical link: https://commits.webkit.org/102087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114902 268f45cc-cd09-0410-ab3c-d52691b4dbfc